src/com/chronicweirdo/jbon/grammar/JBONParser.java
// Generated from src/com/chronicweirdo/jbon/grammar/JBON.g4 by ANTLR 4.1

package com.chronicweirdo.jbon.grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JBONParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__14=1, T__13=2, T__12=3, T__11=4, T__10=5, T__9=6, T__8=7, T__7=8, T__6=9, 
		T__5=10, T__4=11, T__3=12, T__2=13, T__1=14, T__0=15, NULL=16, TRUE=17, 
		FALSE=18, STRING=19, CHAR=20, ID=21, FLOAT=22, INTEGER=23, HEXADECIMAL=24, 
		BINARY=25, WS=26;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "')'", "'.'", "','", "'D'", "'['", "':'", "'('", "'d'", 
		"'f'", "'l'", "'{'", "'F'", "'}'", "'L'", "'null'", "'true'", "'false'", 
		"STRING", "CHAR", "ID", "FLOAT", "INTEGER", "HEXADECIMAL", "BINARY", "WS"
	};
	public static final int
		RULE_object = 0, RULE_type = 1, RULE_map = 2, RULE_entry = 3, RULE_key = 4, 
		RULE_value = 5, RULE_list = 6, RULE_primitive = 7, RULE_p_int = 8, RULE_p_long = 9, 
		RULE_p_float = 10, RULE_p_double = 11, RULE_p_char = 12, RULE_p_string = 13, 
		RULE_p_boolean = 14;
	public static final String[] ruleNames = {
		"object", "type", "map", "entry", "key", "value", "list", "primitive", 
		"p_int", "p_long", "p_float", "p_double", "p_char", "p_string", "p_boolean"
	};

	@Override
	public String getGrammarFileName() { return "JBON.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public JBONParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ObjectContext extends ParserRuleContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public MapContext map() {
			return getRuleContext(MapContext.class,0);
		}
		public PrimitiveContext primitive() {
			return getRuleContext(PrimitiveContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_object; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).enterObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).exitObject(this);
		}
	}

	public final ObjectContext object() throws RecognitionException {
		ObjectContext _localctx = new ObjectContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_object);
		try {
			setState(39);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(30); type();
				setState(31); map();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(33); map();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(34); type();
				setState(35); list();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(37); list();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(38); primitive();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(JBONParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(JBONParser.ID, i);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_type);
		int _la;
		try {
			setState(59);
			switch (_input.LA(1)) {
			case 8:
				enterOuterAlt(_localctx, 1);
				{
				setState(41); match(8);
				setState(42); match(ID);
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==3) {
					{
					{
					setState(43); match(3);
					setState(44); match(ID);
					}
					}
					setState(49);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(50); match(2);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(51); match(ID);
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==3) {
					{
					{
					setState(52); match(3);
					setState(53); match(ID);
					}
					}
					setState(58);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MapContext extends ParserRuleContext {
		public EntryContext entry(int i) {
			return getRuleContext(EntryContext.class,i);
		}
		public List<EntryContext> entry() {
			return getRuleContexts(EntryContext.class);
		}
		public MapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_map; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).enterMap(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).exitMap(this);
		}
	}

	public final MapContext map() throws RecognitionException {
		MapContext _localctx = new MapContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_map);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); match(12);
			setState(63);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 6) | (1L << 8) | (1L << 12) | (1L << TRUE) | (1L << FALSE) | (1L << STRING) | (1L << CHAR) | (1L << ID) | (1L << FLOAT) | (1L << INTEGER) | (1L << HEXADECIMAL) | (1L << BINARY))) != 0)) {
				{
				setState(62); entry();
				}
			}

			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==4) {
				{
				{
				setState(65); match(4);
				setState(66); entry();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72); match(14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntryContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public EntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).enterEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).exitEntry(this);
		}
	}

	public final EntryContext entry() throws RecognitionException {
		EntryContext _localctx = new EntryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_entry);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74); key();
			setState(75); match(7);
			setState(76); value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeyContext extends ParserRuleContext {
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public TerminalNode ID() { return getToken(JBONParser.ID, 0); }
		public KeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_key; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).enterKey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).exitKey(this);
		}
	}

	public final KeyContext key() throws RecognitionException {
		KeyContext _localctx = new KeyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_key);
		try {
			setState(80);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78); object();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(79); match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); object();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public ObjectContext object(int i) {
			return getRuleContext(ObjectContext.class,i);
		}
		public List<ObjectContext> object() {
			return getRuleContexts(ObjectContext.class);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).exitList(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); match(6);
			setState(86);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 6) | (1L << 8) | (1L << 12) | (1L << TRUE) | (1L << FALSE) | (1L << STRING) | (1L << CHAR) | (1L << ID) | (1L << FLOAT) | (1L << INTEGER) | (1L << HEXADECIMAL) | (1L << BINARY))) != 0)) {
				{
				setState(85); object();
				}
			}

			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==4) {
				{
				{
				setState(88); match(4);
				setState(89); object();
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95); match(1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitiveContext extends ParserRuleContext {
		public P_stringContext p_string() {
			return getRuleContext(P_stringContext.class,0);
		}
		public P_intContext p_int() {
			return getRuleContext(P_intContext.class,0);
		}
		public P_floatContext p_float() {
			return getRuleContext(P_floatContext.class,0);
		}
		public P_doubleContext p_double() {
			return getRuleContext(P_doubleContext.class,0);
		}
		public P_booleanContext p_boolean() {
			return getRuleContext(P_booleanContext.class,0);
		}
		public P_charContext p_char() {
			return getRuleContext(P_charContext.class,0);
		}
		public P_longContext p_long() {
			return getRuleContext(P_longContext.class,0);
		}
		public PrimitiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).enterPrimitive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).exitPrimitive(this);
		}
	}

	public final PrimitiveContext primitive() throws RecognitionException {
		PrimitiveContext _localctx = new PrimitiveContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_primitive);
		try {
			setState(104);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97); p_int();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98); p_long();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(99); p_float();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(100); p_double();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(101); p_string();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(102); p_char();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(103); p_boolean();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class P_intContext extends ParserRuleContext {
		public TerminalNode HEXADECIMAL() { return getToken(JBONParser.HEXADECIMAL, 0); }
		public TerminalNode BINARY() { return getToken(JBONParser.BINARY, 0); }
		public TerminalNode INTEGER() { return getToken(JBONParser.INTEGER, 0); }
		public P_intContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p_int; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).enterP_int(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).exitP_int(this);
		}
	}

	public final P_intContext p_int() throws RecognitionException {
		P_intContext _localctx = new P_intContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_p_int);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << HEXADECIMAL) | (1L << BINARY))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class P_longContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(JBONParser.INTEGER, 0); }
		public P_longContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p_long; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).enterP_long(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).exitP_long(this);
		}
	}

	public final P_longContext p_long() throws RecognitionException {
		P_longContext _localctx = new P_longContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_p_long);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108); match(INTEGER);
			setState(109);
			_la = _input.LA(1);
			if ( !(_la==11 || _la==15) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class P_floatContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(JBONParser.FLOAT, 0); }
		public P_floatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p_float; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).enterP_float(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).exitP_float(this);
		}
	}

	public final P_floatContext p_float() throws RecognitionException {
		P_floatContext _localctx = new P_floatContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_p_float);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111); match(FLOAT);
			setState(112);
			_la = _input.LA(1);
			if ( !(_la==10 || _la==13) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class P_doubleContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(JBONParser.FLOAT, 0); }
		public P_doubleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p_double; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).enterP_double(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).exitP_double(this);
		}
	}

	public final P_doubleContext p_double() throws RecognitionException {
		P_doubleContext _localctx = new P_doubleContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_p_double);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(FLOAT);
			setState(116);
			_la = _input.LA(1);
			if (_la==5 || _la==9) {
				{
				setState(115);
				_la = _input.LA(1);
				if ( !(_la==5 || _la==9) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class P_charContext extends ParserRuleContext {
		public TerminalNode CHAR() { return getToken(JBONParser.CHAR, 0); }
		public P_charContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p_char; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).enterP_char(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).exitP_char(this);
		}
	}

	public final P_charContext p_char() throws RecognitionException {
		P_charContext _localctx = new P_charContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_p_char);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); match(CHAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class P_stringContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(JBONParser.STRING, 0); }
		public P_stringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).enterP_string(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).exitP_string(this);
		}
	}

	public final P_stringContext p_string() throws RecognitionException {
		P_stringContext _localctx = new P_stringContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_p_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class P_booleanContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(JBONParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(JBONParser.FALSE, 0); }
		public P_booleanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p_boolean; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).enterP_boolean(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBONListener ) ((JBONListener)listener).exitP_boolean(this);
		}
	}

	public final P_booleanContext p_boolean() throws RecognitionException {
		P_booleanContext _localctx = new P_booleanContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_p_boolean);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		ATNSimulator.deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}